# adm_cloud_services_portfolio

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs
static/: index.html
