[package]
name = "adm_cloud_services_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dev-dependencies]
rand = "0.8"